module(
    name = "bazel_bats",
    # See: https://github.com/bazel-contrib/rules-template/blob/main/MODULE.bazel
    version = "",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.42.0")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1")
# -- bazel_dep definitions -- #

# -- use_repo_rule statements -- #

bazel_bats = use_extension(":extensions.bzl", "bazel_bats_deps")

BATS_ASSERT_VERSION = "2.2.4"
BATS_ASSERT_SHA256 = "e305df20c4c36cba4570e10f1cd824efb1ae71d88b5ef474550781ebee04192f"
BATS_CORE_VERSION = "1.12.0"
BATS_CORE_SHA256 = "e36b020436228262731e3319ed013d84fcd7c4bd97a1b34dee33d170e9ae6bab"
BATS_SUPPORT_VERSION = "0.3.0"
BATS_SUPPORT_SHA256 = "7815237aafeb42ddcc1b8c698fc5808026d33317d8701d5ec2396e9634e2918f"

bazel_bats.bats_core(version = BATS_CORE_VERSION, sha256 = BATS_CORE_SHA256)
bazel_bats.bats_assert(version = BATS_ASSERT_VERSION, sha256 = BATS_ASSERT_SHA256)
bazel_bats.bats_support(version = BATS_SUPPORT_VERSION, sha256 = BATS_SUPPORT_SHA256)

use_repo(bazel_bats, "bats_core", "bats_assert", "bats_support")

# -- repo definitions -- #
