load("@bazel_bats//:rules.bzl", "bats_test", "bats_test_suite")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")

sh_binary(
    name = "exit_with_input_bin",
    srcs = ["exit_with_input"],
)

sh_binary(
    name = "wrapper_script_for_exit_with_input_bin",
    srcs = ["wrapper_script_for_exit_with_input"],
    deps = [
        ":exit_with_input_bin"
    ],
)

bats_test(
    name = "exit_with_input_test",
    srcs = ["exit_with_input.bats"],
    deps = [
        ":exit_with_input_bin",
    ],
)

bats_test(
    name = "wrapper_script_for_exit_with_input_test",
    srcs = ["wrapper_script_for_exit_with_input.bats"],
    deps = [
        ":wrapper_script_for_exit_with_input_bin",
    ],
)

bats_test(
    name = "exit_with_input_bats_assert_test",
    srcs = ["exit_with_input_bats_assert.bats"],
    deps = [
        ":exit_with_input_bin",
    ],
    uses_bats_assert = True,
)

sh_library(
    name = "helper",
    srcs = ["helper.bash"],
)

bats_test(
    name = "expected_failure",
    srcs = ["expected_failure.bats"],
    tags = ["manual"],
)

sh_test(
    name = "expected_failure_test",
    srcs = ["run_expected_failures.sh"],
    data = [":expected_failure"],
)

bats_test(
    name = "hello_world_load_test",
    srcs = ["hello_world_load.bats"],
    deps = [":helper"],
)

bats_test(
    name = "hello_world_data_test",
    srcs = ["hello_world_data.bats"],
    data = ["testdata/golden_4.txt"],
)

bats_test(
    name = "hello_world_test",
    srcs = ["hello_world.bats"],
    env = {
        "PROGRAM": "hello_world",
        "LOCATED": "$(location :dummy)",
        "TOOLCHAIN_STRING_FLAG_ENV_VAR": "$(STRING_FLAG_ENV_VAR)",
    },
    deps = [":dummy"],
    toolchains = [
        ":hello_world_flag",
    ],
)

bats_test(
    name = "hello_world_twofiles_test",
    srcs = [
        "hello_world_1.bats",
        "hello_world_2.bats",
    ],
)

bats_test(
    name = "hello_world_twofiles_1_test",
    srcs = [
        "hello_world_1.bats",
    ],
)

bats_test(
    name = "hello_world_twofiles_2_test",
    srcs = [
        "hello_world_2.bats",
    ],
)

filegroup(
    name = "dummy",
    srcs = ["dummy.txt"],
)

bats_test_suite(
    name = "test_suite",
    srcs = [
        "hello_world_1.bats",
        "hello_world_2.bats",
    ]
)

string_flag(
    name = "hello_world_flag",
    build_setting_default = "flag_value",
    make_variable = "STRING_FLAG_ENV_VAR",
)
